# HybridECS

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  HybridECS.sln  README-CN.md  README.md  auto_reference.h  benchmark_display.py  compile_commands.json  delegate.h  function.h  function_traits.h  git_subtree_manager.py  multicast_delegate.h  multicast_function.h  offset_ptr.h  subtrees.json  type_list.h  xmake.lua
HybridECS/: CMakeLists.txt  HybridECS.vcxproj  HybridECS.vcxproj.filters
HybridECS/src/: HybridECS.cpp  NatvisFile.natvis  pch.h  query_api.h  small_vector.natvis  test_archetype_registry.h  test_seq.h  test_sparse_table.h  test_table.h  test_type.h
HybridECS/src/container/: bit_set.h  container.h  container_config.h  fixed_vector.h  generic_container.h  generic_dense_map.h  generic_type.h  generic_unordered_map.h  generic_vector.h  raw_segmented_vector.h  segmented_bit_set.h  sequence_ref.h  small_vector.h  static_string.h  stl_container.h  type_hash.h  vaildref_map.h  variant_array.h  variant_vector.h
HybridECS/src/core/: archetype.h  archetype_registry.h  archetype_registry_II.h  archetype_registry_node.h  archetype_storage.h  component.h  component_group.h  component_storage.h  cross_archetype_storage.h  cross_query.h  data_registry.h  dense_map.h  entity.h  group_registry.h  hyecs_core.h  marco.h  query.h  rtref.h  table.h  (+8 more)
HybridECS/test/: _TEST_main.cpp  test_archetype_registry.cpp  test_cross_query.cpp  test_query_api.cpp
HybridECS/test_util/: managed_object_tester.h  memleak_detect.h  ut.hpp
TEST/: CMakeLists.txt  TEST.cpp  TEST.vcxproj  TEST.vcxproj.filters
TEST/src/: include.h  test_component_storage.cpp  test_dense_map.cpp  test_entity_map.cpp  test_raw_segmented_vector.cpp  test_seq.cpp  test_sparse_table.cpp  test_table.cpp
(+114 files in other folders)
